--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-add_library(${PROJECT_NAME}_lib RROS.c RROS_TimeCounter.c)
-target_include_directories(${PROJECT_NAME}_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_library(${PROJECT_NAME} RROS.c RROS_TimeCounter.c)
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
